# CrabLauncher

./: .gitignore  Cargo.toml  README.md  build-dmg.sh  build-macos.sh  logo.ase
.cargo/: config.toml
.github/workflows/: deploy.yml  release.yml
assets/: CrabLauncher.icns
client/: Cargo.toml
client/src/: about.rs  accounts.rs  assets.rs  download.rs  icons.rs  installers.rs  instances.rs  loading.rs  main.rs  modrinth_installer.rs  modrinth_modpacks.rs  new_vanilla_instance.rs  news.rs  settings.rs  style.rs  vanilla_installer.rs
client/src/subscriptions/: download.rs  mod.rs
gui/: Cargo.toml
gui/src/: assets.rs  main.rs
gui/src/components/: icon.rs  mod.rs  navbar.rs
gui/src/pages/: about.rs  accounts.rs  download.rs  error.rs  instances.rs  mod.rs  modrinth_modpacks.rs  new_instance.rs  no_instances.rs  root.rs  settings.rs  status.rs  vanilla_installer.rs
gui/src/subscriptions/: download.rs
gui/src/types/: download.rs  launcher.rs  login.rs  messages.rs  mod.rs  modrinth_modpacks.rs
lib/: Cargo.toml
lib/src/: accounts.rs  adoptium.rs  fabric.rs  instances.rs  lib.rs  modrinth.rs  paths.rs  settings.rs  updater.rs  vanilla_installer.rs
macos/CrabLauncher.app/Contents/: Info.plist
macos/CrabLauncher.app/Contents/Resources/: logo-128x128.icns  logo-256x256.icns  logo.icns
macos/Ice Launcher.app/Contents/: Info.plist
macos/Icy Launcher.app/Contents/: Info.plist
macos/Icy Launcher.app/Contents/Resources/: icy-launcher.icns
mclib/: Cargo.toml
mclib/src/: accounts.rs  instances.rs  launcher_config.rs  launcher_updater.rs  lib.rs  minecraft_assets.rs  minecraft_libraries.rs  minecraft_news.rs  minecraft_rules.rs  minecraft_version_manifest.rs  minecraft_version_meta.rs  modrinth.rs  msa.rs  runtime_manager.rs
modules/installers/: vanilla.lua
modules/runtimes/: adoptium.lua  graalvm-ce.lua
src/: about.rs  accounts.rs  adding_account.rs  app.rs  assets.rs  confirm_account_remove.rs  confirm_instance_delete.rs  create_instance.rs  creating_instance.rs  download.rs  icon.rs  icons.rs  info.rs  install_runtime.rs  installer.rs  installers.rs  instance.rs  instance_name_selection.rs  instance_type_selection.rs  instance_version_selection.rs  instances.rs  latest_instance.rs  launcher.rs  loading.rs  loading_versions.rs  main.rs  message.rs  modrinth_installer.rs  modrinth_modpack.rs  modrinth_modpack_selection.rs  navbar.rs  new_instance.rs  new_modrinth_instance.rs  new_vanilla_instance.rs  news.rs  pages.rs  progress.rs  root.rs  runtimes.rs  server.rs  (+6 more)
src/components/: about.rs  adding_account.rs  assets.rs  error.rs  footer.rs  fullscreen_message.rs  icons.rs  instances.rs  mod.rs  navbar.rs  navigation_button.rs  settings.rs  vanilla_installer.rs
src/lib/: accounts.rs  instances.rs  launcher_config.rs  launcher_updater.rs  minecraft_assets.rs  minecraft_instances.rs  minecraft_libraries.rs  minecraft_news.rs  minecraft_rules.rs  minecraft_version_manifest.rs  minecraft_version_meta.rs  mod.rs  modrinth.rs  msa.rs  runtime_manager.rs
src/pages/: about.rs  accounts.rs  adding_account.rs  adding_offline_account.rs  download.rs  error.rs  info.rs  instance.rs  instances.rs  login.rs  mod.rs  modrinth_installer.rs  modrinth_modpacks.rs  new_instance.rs  no_instances.rs  root.rs  settings.rs  status.rs  vanilla_installer.rs
src/subscriptions/: download.rs  mod.rs
src/types/: accounts.rs  download.rs  generic_error.rs  instance.rs  instances.rs  launcher.rs  login.rs  messages.rs  mod.rs  modrinth_modpacks.rs  settings.rs  vanilla_installer.rs
src/util/: accounts.rs  adoptium.rs  fabric.rs  instances.rs  lua.rs  minecraft_news.rs  mod.rs  modrinth.rs  oauth2_client.rs  paths.rs  runtime_manager.rs  settings.rs  updater.rs  vanilla_installer.rs
