[package]
name = "crab-launcher"
version = "1.0.0-alpha"
edition = "2021"
authors = ["Manuel Quarneti <manuelquarneti@protonmail.com>"]
repository = "https://github.com/mq1/CrabLauncher"
license = "GPL-3.0-only"
description = "An unofficial launcher for Minecraft: Java Edition"

[dependencies]
eframe = "0.23"
egui_extras = { version = "0.23", features = ["all_loaders"] }
ehttp = "0.3"
image = { version = "0.24", features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.18"
directories = "5.0"
open = "5.0"
egui-modal = "0.2"
poll-promise = "0.3"

[package.metadata.bundle]
name = "CrabLauncher"
identifier = "eu.mq1.CrabLauncher"
icon = ["assets/logo-128x128.png"]
copyright = "Copyright (c) 2023 Manuel Quarneti"
category = "Games"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
