[package]
name = "crab-launcher"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Manuel Quarneti <manuelquarneti@protonmail.com>"]
repository = "https://github.com/mq1/CrabLauncher"
license = "GPL-3.0-only"
description = "An unofficial launcher for Minecraft: Java Edition"

[dependencies]
iced = { version = "0.10", features = ["tokio", "image", "svg"] }
iced_aw = { version = "0.7", features = ["card"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rfd = "0.12"
toml = "0.8"
directories = "5.0"
once_cell = "1.18"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
