[package]
name = "ice-launcher"
version = "0.2.2"
edition = "2021"
authors = ["Manuel Quarneti <hi@mq1.eu>"]
repository = "https://github.com/mq1/ice-launcher"
license = "GPL-3.0-only"
description = "An unofficial launcher for Minecraft: Java Edition"

[dependencies]
mclib = { path = "../mclib" }
iced = { version = "0.5", features = ["image"] }
rfd = "0.10"
anyhow = "1"
open = "3"

[features]
default = ["check-for-updates"]
check-for-updates = []
