[package]
name = "crab-launcher"
version = "1.0.0-alpha"
edition = "2021"
resolver = "2"
authors = ["Manuel Quarneti <manuelquarneti@protonmail.com>"]
repository = "https://github.com/mq1/CrabLauncher"
license = "GPL-3.0-only"
description = "An unofficial launcher for Minecraft: Java Edition"

[dependencies]
lib = { path = "../lib" }
iced = { version = "0.10", features = ["image", "svg"] }
iced_aw = { version = "0.7", features = ["wrap", "floating_element", "spinner", "card"] }
rfd = "0.12"
open = "5.0"

[features]
default = ["updater", "offline-accounts"]
updater = []
offline-accounts = []

[package.metadata.bundle]
name = "CrabLauncher"
identifier = "eu.mq1.CrabLauncher"
icon = ["assets/logo-128x128.png"]
copyright = "Copyright (c) 2023 Manuel Quarneti"
category = "Games"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
