[package]
name = "lib"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Manuel Quarneti <manuelquarneti@protonmail.com>"]
repository = "https://github.com/mq1/CrabLauncher"
license = "GPL-3.0-only"
description = "A library for an unofficial launcher for Minecraft: Java Edition"

[dependencies]
anyhow = "1.0"
digest = "0.10"
flate2 = "1.0"
once_cell = "1.18"
sha1 = "0.10"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.8"
ureq = { version = "2.8", features = ["json"] }
zip = "0.6"
serde = "1.0"
serde_json = "1.0"
directories = "5.0"
time = { version = "0.3", features = ["serde"] }
oauth2 = { version = "4.4", default-features = false, features = ["ureq"] }
serde_with = { version = "3.4", features = ["base64"] }
toml = "0.8"
version-compare = "0.1"
md-5 = "0.10"
