[package]
name = "mclib"
version = "0.2.2"
edition = "2021"
authors = ["Manuel Quarneti <hi@mq1.eu>"]
repository = "https://github.com/mq1/ice-launcher"
license = "GPL-3.0-only"
description = "An unofficial launcher for Minecraft: Java Edition"

[dependencies]
attohttpc = { version = "0.24", default-features = false, features = ["tls-rustls-native-roots", "form", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
anyhow = "1"
open = "3"
directories = "4"
strum = "0.24"
strum_macros = "0.24"
toml = "0.5"
once_cell = "1"
version-compare = "0.1"
sha1 = "0.10"
sha2 = "0.10"
base16ct = { version = "0.1", features = ["alloc"] }
base64ct = { version = "1", features = ["alloc"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
tempfile = "3"
rand = "0.8"
arrayvec = { version = "0.7", features = ["serde"] }
